Refactor Bippo-specific stuff. Refs #14.

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -74,6 +74,16 @@
 				<artifactId>org.soluvas.web.banner</artifactId>
 				<version>${project.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>org.soluvas</groupId>
+				<artifactId>org.soluvas.web.olark</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.soluvas</groupId>
+				<artifactId>org.soluvas.web.googleanalytics</artifactId>
+				<version>${project.version}</version>
+			</dependency>
 
 			<dependency>
 				<groupId>org.soluvas</groupId>
