--- a/banner/pom.xml
+++ b/banner/pom.xml
@@ -30,8 +30,16 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>org.eclipse.emf</groupId>
+			<artifactId>org.eclipse.emf.common</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.karaf.shell</groupId>
 			<artifactId>org.apache.karaf.shell.console</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.osgi</groupId>
+			<artifactId>org.osgi.core</artifactId>
 		</dependency>
 		
 		<dependency>
@@ -90,10 +98,11 @@
 				<configuration>
 					<instructions>
 						<Export-Package>org.soluvas.web.banner.*</Export-Package>
-<!-- 						<Import-Package> -->
-<!-- 							org.apache.felix.gogo.commands;version="0.6.0", -->
-<!-- 							org.apache.karaf.shell.console,org.osgi.framework;version="1.3.0", -->
-<!-- 							*</Import-Package> -->
+						<Import-Package>
+							org.apache.felix.service.command;resolution:=optional,
+							org.apache.felix.gogo.commands;resolution:=optional,
+							org.apache.karaf.shell.console;resolution:=optional,
+							*</Import-Package>
 					</instructions>
 				</configuration>
 			</plugin>
