--- a/login/pom.xml
+++ b/login/pom.xml
@@ -161,11 +161,17 @@
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
+				<extensions>true</extensions>
 				<configuration>
 					<instructions>
-<!-- 							org.apache.felix.gogo.commands;version="0.6.0", -->
-<!-- 							org.apache.karaf.shell.console,org.osgi.framework;version="1.3.0", -->
-<!-- 							*</Import-Package> -->
+						<!-- Required imports of Pax Wicket, see http://team.ops4j.org/wiki/display/paxwicket/Wicket+Applications+(Quick) -->
+						<Import-Package>
+							org.eclipse.emf.ecore,org.eclipse.emf.ecore.resource,org.eclipse.emf.common,org.eclipse.emf.common.notify,
+							*</Import-Package>
+						<Require-Bundle>org.ops4j.pax.wicket.service</Require-Bundle>
+						<!--<Export-Package>com.soluvas.social</Export-Package> -->
+						<!--<Private-Package>org.foo.myproject.*</Private-Package> -->
+						<!--<Bundle-Activator>org.foo.myproject.impl1.Activator</Bundle-Activator> -->
 					</instructions>
 				</configuration>
 			</plugin>
