--- a/bootstrap/pom.xml
+++ b/bootstrap/pom.xml
@@ -10,7 +10,7 @@
 		<relativePath>../parent/pom.xml</relativePath>
 	</parent>
 	<artifactId>org.soluvas.web.bootstrap</artifactId>
-	<version>2.0.0-SNAPSHOT</version>
+<!-- 	<version>2.0.0-SNAPSHOT</version> -->
 	<packaging>bundle</packaging>
 	<name>Soluvas Web Bootstrap</name>
 	<description>Twitter bootstrap HTML5 template.</description>
@@ -86,6 +86,7 @@
 					<instructions>
 						<!-- Required imports of Pax Wicket, see http://team.ops4j.org/wiki/display/paxwicket/Wicket+Applications+(Quick) -->
 						<Import-Package>
+							org.eclipse.emf.ecore,org.eclipse.emf.ecore.resource,org.eclipse.emf.common,org.eclipse.emf.common.notify,
 							org.apache.wicket,
 							org.soluvas.web.site,
 							org.slf4j,
