Summary: 1. Fix for person web mall/sys/pub pages.

--- a/login/pom.xml
+++ b/login/pom.xml
@@ -21,6 +21,15 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.soluvas</groupId>
+			<artifactId>org.soluvas.facebook</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.soluvas</groupId>
+			<artifactId>org.soluvas.twitter</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.soluvas</groupId>
 			<artifactId>org.soluvas.web.bootstrap</artifactId>
 		</dependency>
 		<dependency>
