fix for maven incremental Eclipse build

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -238,7 +238,10 @@
 										</goals>
 									</pluginExecutionFilter>
 									<action>
-										<execute />
+										<execute>
+											<!-- seems to be needed on Eclipse 3.8.2 / m2e 1.3 ! -->
+											<runOnIncremental>true</runOnIncremental>
+										</execute>
 									</action>
 								</pluginExecution>
 							</pluginExecutions>
