--- a/nav/pom.xml
+++ b/nav/pom.xml
@@ -17,9 +17,9 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.soluvas</groupId>
-			<artifactId>org.soluvas.async</artifactId>
+			<artifactId>org.soluvas.commons</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.osgi</groupId>
 			<artifactId>org.osgi.compendium</artifactId>
@@ -38,40 +38,6 @@
 		<dependency>
 			<groupId>org.ops4j.pax.wicket</groupId>
 			<artifactId>org.ops4j.pax.wicket.test</artifactId>
-		</dependency>
-
-		<!--
-		<dependency>
-			<groupId>org.soluvas</groupId>
-			<artifactId>org.soluvas.image</artifactId>
-			<version>2.0.0-SNAPSHOT</version>
-			<exclusions>
-				<exclusion>
-		          <groupId>commons-logging</groupId>
-		          <artifactId>commons-logging</artifactId>
-		        </exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.soluvas</groupId>
-			<artifactId>org.soluvas.cdi</artifactId>
-			<version>2.0.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.soluvas</groupId>
-			<artifactId>org.soluvas.ldap</artifactId>
-			<version>2.0.0-SNAPSHOT</version>
-			<exclusions>
-				<exclusion>
-					<artifactId>commons-logging</artifactId>
-					<groupId>commons-logging</groupId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		-->
-		<dependency>
-			<groupId>org.soluvas</groupId>
-			<artifactId>org.soluvas.push</artifactId>
 		</dependency>
 
 		<dependency>
