--- a/site/pom.xml
+++ b/site/pom.xml
@@ -32,6 +32,10 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>javax.enterprise</groupId>
+			<artifactId>cdi-api</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.antlr</groupId>
