asynchronous execution using ListenableFuture. NEW - # 658: Use adaptive image resizing for normal (product view) & large (zoomed)  https://bitbucket.org/bippo/bippo-commerce5/issue/658/

--- a/bootstrap/pom.xml
+++ b/bootstrap/pom.xml
@@ -86,6 +86,7 @@
 							org.apache.wicket,
 							org.soluvas.web.site,
 							org.slf4j,
+							com.google.common.util.concurrent,
 							javax.servlet,javax.servlet.http,
 							org.ops4j.pax.wicket.util.proxy,
 							net.sf.cglib.proxy;version="[2,3)",
