--- a/bootstrap/pom.xml
+++ b/bootstrap/pom.xml
@@ -47,6 +47,10 @@
 			<groupId>org.osgi</groupId>
 			<artifactId>org.osgi.core</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.wicket</groupId>
+			<artifactId>wicket-spring</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>com.google.guava</groupId>
