--- a/bootstrap/pom.xml
+++ b/bootstrap/pom.xml
@@ -93,6 +93,7 @@
 							com.google.common.util.concurrent,
 							javax.servlet,javax.servlet.http,
 							org.ops4j.pax.wicket.util.proxy,
+							org.apache.wicket.spring.*;resolution:=optional,
 							net.sf.cglib.proxy;version="[2,3)",
 							net.sf.cglib.core;version="[2,3)",
 							net.sf.cglib.reflect;version="[2,3)",
