--- a/login/pom.xml
+++ b/login/pom.xml
@@ -63,11 +63,23 @@
 		    <groupId>com.google.http-client</groupId>
 		    <artifactId>google-http-client-jackson2</artifactId>
 		    <version>1.13.1-beta</version>
+		    <exclusions>
+		    	<exclusion>
+		    		<artifactId>guava-jdk5</artifactId>
+		    		<groupId>com.google.guava</groupId>
+		    	</exclusion>
+		    </exclusions>
 		</dependency>
 		<dependency>
       		<groupId>com.google.api-client</groupId>
       		<artifactId>google-api-client</artifactId>
       		<version>1.13.2-beta</version>
+		    <exclusions>
+		    	<exclusion>
+		    		<artifactId>guava-jdk5</artifactId>
+		    		<groupId>com.google.guava</groupId>
+		    	</exclusion>
+		    </exclusions>
     	</dependency>
 <!-- 		<dependency> -->
 <!--       		<groupId>com.google.api-client</groupId> -->
