* Cart fix * Generic person photos

--- a/site/pom.xml
+++ b/site/pom.xml
@@ -27,7 +27,11 @@
 			<groupId>org.soluvas</groupId>
 			<artifactId>org.soluvas.jaxrs</artifactId>
 		</dependency>
-		
+		<dependency>
+			<groupId>org.soluvas</groupId>
+			<artifactId>org.soluvas.image</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
