--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -97,6 +97,11 @@
 				<artifactId>wicket-datetime</artifactId>
 				<version>${wicket.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>org.apache.wicket</groupId>
+				<artifactId>wicket-atmosphere</artifactId>
+				<version>0.8</version>
+			</dependency>
 			<!-- Pax Wicket Core -->
 			<dependency>
 				<groupId>org.ops4j.pax.wicket</groupId>
