--- a/login/pom.xml
+++ b/login/pom.xml
@@ -5,9 +5,9 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.soluvas</groupId>
-		<artifactId>org.soluvas.web.parent</artifactId>
+		<artifactId>org.soluvas.web.build</artifactId>
 		<version>2.0.0-SNAPSHOT</version>
-		<relativePath>../parent/pom.xml</relativePath>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>org.soluvas.web.login</artifactId>
 	<packaging>bundle</packaging>
