--- a/process.stomp/pom.xml
+++ b/process.stomp/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.soluvas</groupId>
-		<artifactId>org.soluvas.web.build</artifactId>
+		<artifactId>org.soluvas.web.parent</artifactId>
 		<version>2.0.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
