--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,6 @@
 	</licenses>
 
 	<properties>
-		<pax-wicket.version>2.1.0</pax-wicket.version>
 		<wicket.version>6.7.0</wicket.version><!-- used by wicketstuff e.g. wicket-datetime -->
 	</properties>
 
@@ -85,12 +84,6 @@
 			</dependency>
 
 			<dependency>
-				<groupId>org.ops4j.pax.web</groupId>
-				<artifactId>pax-web-extender-whiteboard</artifactId>
-				<version>1.1.3</version><!-- 1.1.12 is available, but not default in Karaf 2.3.0 -->
-			</dependency>
-
-			<dependency>
 			    <groupId>com.restfb</groupId>
 			    <artifactId>restfb</artifactId>
 			    <version>1.6.11</version>
@@ -118,30 +111,10 @@
 				<artifactId>wicket-atmosphere</artifactId>
 				<version>0.9</version>
 			</dependency>
-			<!-- Pax Wicket Core -->
 			<dependency>
-				<groupId>org.ops4j.pax.wicket</groupId>
-				<artifactId>org.ops4j.pax.wicket.service</artifactId>
-				<version>${pax-wicket.version}</version>
-				<exclusions>
-					<exclusion>
-						<artifactId>ops4j-base</artifactId>
-						<groupId>org.ops4j.base</groupId>
-					</exclusion>
-				</exclusions>
-			</dependency>
-			<!-- Pax Wicket Test Utilities -->
-			<dependency>
-				<groupId>org.ops4j.pax.wicket</groupId>
-				<artifactId>org.ops4j.pax.wicket.test</artifactId>
-				<version>${pax-wicket.version}</version>
-				<scope>test</scope>
-				<exclusions>
-					<exclusion>
-						<artifactId>ops4j-base</artifactId>
-						<groupId>org.ops4j.base</groupId>
-					</exclusion>
-				</exclusions>
+				<groupId>org.apache.wicket</groupId>
+				<artifactId>wicket-core</artifactId>
+				<version>${wicket.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.wicket</groupId>
