--- a/bootstrap/pom.xml
+++ b/bootstrap/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 	<artifactId>org.soluvas.web.bootstrap</artifactId>
 <!-- 	<version>2.0.0-SNAPSHOT</version> -->
-	<packaging>bundle</packaging>
+	<packaging>jar</packaging>
 	<name>Soluvas Web Bootstrap</name>
 	<description>Twitter bootstrap HTML5 template.</description>
 
@@ -70,31 +70,6 @@
 
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-bundle-plugin</artifactId>
-				<configuration>
-					<instructions>
-						<!-- Required imports of Pax Wicket, see http://team.ops4j.org/wiki/display/paxwicket/Wicket+Applications+(Quick) -->
-						<Import-Package>
-							org.eclipse.emf.ecore,org.eclipse.emf.ecore.resource,org.eclipse.emf.common,org.eclipse.emf.common.notify,
-							org.apache.wicket,
-							org.soluvas.web.site,
-							org.slf4j,
-							com.google.common.util.concurrent,
-							javax.servlet,javax.servlet.http,
-							org.ops4j.pax.wicket.util.proxy,
-							org.apache.wicket.spring.*;resolution:=optional,
-							net.sf.cglib.proxy;version="[2,3)",
-							net.sf.cglib.core;version="[2,3)",
-							net.sf.cglib.reflect;version="[2,3)",
-							*</Import-Package>
-						<Require-Bundle>org.ops4j.pax.wicket.service</Require-Bundle>
-						<DynamicImport-Package>*</DynamicImport-Package> <!-- why? http://team.ops4j.org/browse/PAXWICKET-375 -->
-					</instructions>
-				</configuration>
-			</plugin>
-
 		</plugins>
 	</build>
 
