--- a/process.stomp/pom.xml
+++ b/process.stomp/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 	<artifactId>org.soluvas.process.stomp</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
-	<packaging>bundle</packaging>
+	<packaging>jar</packaging>
 	<name>Soluvas Process Stomp</name>
 	<description>Stomp via SockJS and Stomp.js library.</description>
 
@@ -29,38 +29,10 @@
 			<artifactId>org.soluvas.process</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
-
-		<dependency>
-			<groupId>org.ops4j.pax.wicket</groupId>
-			<artifactId>org.ops4j.pax.wicket.service</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.ops4j.pax.wicket</groupId>
-			<artifactId>org.ops4j.pax.wicket.test</artifactId>
-		</dependency>
 	</dependencies>
 
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-bundle-plugin</artifactId>
-				<configuration>
-					<instructions>
-						<!-- Required imports of Pax Wicket, see http://team.ops4j.org/wiki/display/paxwicket/Wicket+Applications+(Quick) -->
-						<Import-Package>
-							org.ops4j.pax.web.extender.whiteboard;version="1.0.0",
-							org.ops4j.pax.web.extender.whiteboard.runtime;version="1.0.0",
-							javax.servlet,javax.servlet.http,
-							org.ops4j.pax.wicket.util.proxy,
-							net.sf.cglib.proxy;version="[2,3)",
-							net.sf.cglib.core;version="[2,3)",
-							net.sf.cglib.reflect;version="[2,3)",
-							*</Import-Package>
-						<Require-Bundle>org.ops4j.pax.wicket.service</Require-Bundle>
-					</instructions>
-				</configuration>
-			</plugin>
 		</plugins>
 	</build>
 
