--- a/bootstrap/pom.xml
+++ b/bootstrap/pom.xml
@@ -22,6 +22,10 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>com.vaynberg.wicket.select2</groupId>
+			<artifactId>wicket-select2</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>de.agilecoders.wicket</groupId>
 			<artifactId>wicket-bootstrap-core</artifactId>
 			<version>0.8.1</version>
