--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,11 @@
 			</dependency>
 			
 			<dependency>
+				<groupId>com.vaynberg.wicket.select2</groupId>
+				<artifactId>wicket-select2</artifactId>
+				<version>2.2.2</version>
+			</dependency>
+			<dependency>
 				<groupId>org.apache.wicket</groupId>
 				<artifactId>wicket-datetime</artifactId>
 				<version>${wicket.version}</version>
