IN PROGRESS - issue BC-885: Menu Category https://idbippo.atlassian.net/browse/BC-885

--- a/bootstrap/pom.xml
+++ b/bootstrap/pom.xml
@@ -20,7 +20,11 @@
 			<groupId>org.soluvas</groupId>
 			<artifactId>org.soluvas.web.site</artifactId>
 		</dependency>
-		
+		<dependency>
+			<groupId>org.soluvas</groupId>
+			<artifactId>org.soluvas.category</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>com.vaynberg.wicket.select2</groupId>
 			<artifactId>wicket-select2</artifactId>
