--- a/nav/pom.xml
+++ b/nav/pom.xml
@@ -17,11 +17,15 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.soluvas</groupId>
-			<artifactId>org.soluvas.web.login</artifactId>
+			<artifactId>org.soluvas.commons</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.soluvas</groupId>
-			<artifactId>org.soluvas.commons</artifactId>
+			<artifactId>org.soluvas.web.site</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-core</artifactId>
 		</dependency>
 
 		<dependency>
