--- a/bootstrap/pom.xml
+++ b/bootstrap/pom.xml
@@ -38,6 +38,12 @@
 			<artifactId>wicket-bootstrap-core</artifactId>
 			<version>0.8.4</version>
 		</dependency>
+		
+		<!-- used by FacebookPageSelect2 -->
+		<dependency>
+			<groupId>com.restfb</groupId>
+			<artifactId>restfb</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.ccil.cowan.tagsoup</groupId>
