--- a/pom.xml
+++ b/pom.xml
@@ -49,8 +49,8 @@
 	</licenses>
 
 	<properties>
-		<wicket.version>6.9.1</wicket.version><!-- used by wicketstuff e.g. wicket-datetime -->
-		<wicketstuff.version>6.9.0</wicketstuff.version>
+		<wicket.version>6.10.0</wicket.version>
+		<wicketstuff.version>6.9.0</wicketstuff.version><!-- used by wicketstuff e.g. wicket-datetime -->
 	</properties>
 
 	<dependencyManagement>
