GRD-71 #comment At least we got the jersey/spring part resolved. See http://forum.springsource.org/showthread.php?141230-Beans-initialized-twice-by-WebApplicationContext&p=454428#post454428

--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,7 @@
 				<groupId>org.apache.wicket</groupId>
 				<artifactId>wicket-atmosphere</artifactId>
 				<version>0.13</version>
+				<!-- Important: Make sure to exclude atmosphere-compat-tomcat7 if you use Tomcat 7.x! -->
 			</dependency>
 			<dependency>
 				<groupId>org.apache.wicket</groupId>
