--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,11 @@
 				<artifactId>wicket-extensions</artifactId>
 				<version>${wicket.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>org.apache.wicket</groupId>
+				<artifactId>wicket-devutils</artifactId>
+				<version>${wicket.version}</version>
+			</dependency>
 
 		</dependencies>
 	</dependencyManagement>
