--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,11 @@
 				<version>0.10</version>
 			</dependency>
 			<dependency>
+				<groupId>org.atmosphere</groupId>
+				<artifactId>atmosphere-runtime</artifactId>
+				<version>1.0.17</version>
+			</dependency>
+			<dependency>
 				<groupId>org.apache.wicket</groupId>
 				<artifactId>wicket-core</artifactId>
 				<version>${wicket.version}</version>
