RESOLVED - issue BC-1373: CategorizedProductPage & ProductsByReleasePage throw exception slugPath padahal URI benar https://idbippo.atlassian.net/browse/BC-1373

--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,11 @@
 				<artifactId>wicket-devutils</artifactId>
 				<version>${wicket.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>org.wicketstuff</groupId>
+				<artifactId>wicketstuff-annotation</artifactId>
+				<version>${wicket.version}</version>
+			</dependency>
 
 		</dependencies>
 	</dependencyManagement>
