--- a/bootstrap/pom.xml
+++ b/bootstrap/pom.xml
@@ -31,6 +31,7 @@
 		<dependency>
 			<groupId>org.apache.wicket</groupId>
 			<artifactId>wicket-devutils</artifactId>
+			<optional>true</optional>
 		</dependency>
 
 		<dependency>
