--- a/pom.xml
+++ b/pom.xml
@@ -175,6 +175,11 @@
 				<artifactId>wicketstuff-annotation</artifactId>
 				<version>${wicket.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>org.wicketstuff</groupId>
+				<artifactId>wicketstuff-gmap3</artifactId>
+				<version>${wicket.version}</version>
+			</dependency>
 
 		</dependencies>
 	</dependencyManagement>
