--- a/bootstrap/pom.xml
+++ b/bootstrap/pom.xml
@@ -60,6 +60,11 @@
 			<version>0.9.2</version>
 		</dependency>
 		<dependency>
+			<groupId>de.agilecoders.wicket.webjars</groupId>
+			<artifactId>wicket-webjars</artifactId>
+			<version>0.4.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.javassist</groupId>
 			<artifactId>javassist</artifactId>
 		</dependency>
