fix ordering css and js bootstrap

--- a/bootstrap/pom.xml
+++ b/bootstrap/pom.xml
@@ -65,6 +65,11 @@
 			<version>0.4.1</version>
 		</dependency>
 		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>bootstrap</artifactId>
+			<version>3.1.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.javassist</groupId>
 			<artifactId>javassist</artifactId>
 		</dependency>
