--- a/pom.xml
+++ b/pom.xml
@@ -49,8 +49,10 @@
 	</licenses>
 
 	<properties>
-		<wicket.version>6.13.0</wicket.version>
-		<wicketstuff.version>6.13.0</wicketstuff.version><!-- used by wicketstuff e.g. wicket-datetime -->
+		<wicket.version>6.14.0</wicket.version>
+		<wicket-atmosphere.version>0.17</wicket-atmosphere.version><!-- linked to wicket.version -->
+		<atmosphere.version>2.0.7</atmosphere.version><!-- somewhat linked to wicket-atmosphere.version -->
+		<wicketstuff.version>6.14.0</wicketstuff.version><!-- used by wicketstuff e.g. wicket-datetime -->
 	</properties>
 
 	<dependencyManagement>
@@ -109,13 +111,13 @@
 			<dependency>
 				<groupId>org.apache.wicket</groupId>
 				<artifactId>wicket-atmosphere</artifactId>
-				<version>0.16</version>
+				<version>${wicket-atmosphere.version}</version>
 				<!-- Important: Make sure to exclude atmosphere-compat-tomcat7 if you use Tomcat 7.x! -->
 			</dependency>
 			<dependency>
 				<groupId>org.atmosphere</groupId>
 				<artifactId>atmosphere-runtime</artifactId>
-				<version>2.0.7</version>
+				<version>${atmosphere.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.wicket</groupId>
