--- a/bootstrap/pom.xml
+++ b/bootstrap/pom.xml
@@ -29,6 +29,10 @@
 			<artifactId>org.soluvas.category</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.soluvas</groupId>
+			<artifactId>org.soluvas.geo</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.wicket</groupId>
 			<artifactId>wicket-devutils</artifactId>
 			<optional>true</optional>
