--- a/site/pom.xml
+++ b/site/pom.xml
@@ -17,6 +17,10 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.soluvas</groupId>
+			<artifactId>org.soluvas.geo</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.soluvas</groupId>
 			<artifactId>org.soluvas.jpa</artifactId>
 			<optional>true</optional>
 		</dependency>
