--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
 
 	<properties>
 		<wicket.version>6.14.0</wicket.version>
+		<wicketstuff.version>6.14.0</wicketstuff.version><!-- used by wicketstuff e.g. wicket-datetime -->
 		<wicket-atmosphere.version>0.17</wicket-atmosphere.version><!-- linked to wicket.version -->
 		<atmosphere.version>2.1.3</atmosphere.version><!-- somewhat linked to wicket-atmosphere.version -->
 	</properties>
