--- a/bootstrap/pom.xml
+++ b/bootstrap/pom.xml
@@ -71,7 +71,7 @@
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>bootstrap</artifactId>
-			<version>3.1.1</version>
+			<version>3.1.1-1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.javassist</groupId>
