BC-1923 #comment soluvas.web RequestMapper fixes

--- a/bootstrap/pom.xml
+++ b/bootstrap/pom.xml
@@ -37,6 +37,10 @@
 			<artifactId>wicket-devutils</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>com.vaynberg.wicket.select2</groupId>
