IN PROGRESS - issue BC-1993: Switch ke CloudBees Private Maven repository https://idbippo.atlassian.net/browse/BC-1993

--- a/pom.xml
+++ b/pom.xml
@@ -291,14 +291,14 @@
 			<id>sonatype-nexus</id>
 			<url>https://oss.sonatype.org/content/groups/public/</url>
 			<snapshots>
-				<enabled>true</enabled>
+				<enabled>false</enabled>
 			</snapshots>
 		</repository>
 		<repository>
 			<id>bippo-nexus-public</id>
 			<url>http://nexus.bippo.co.id/nexus/content/groups/public/</url>
 			<snapshots>
-				<enabled>true</enabled>
+				<enabled>false</enabled>
 			</snapshots>
 		</repository>
 		<repository>
