--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,7 @@
 				<version>${wicket.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.apache.wicket</groupId>
+				<groupId>org.apache.wicket.experimental.wicket6</groupId>
 				<artifactId>wicket-atmosphere</artifactId>
 				<version>0.19</version>
 				<!-- Important: Make sure to exclude atmosphere-compat-tomcat7 if you use Tomcat 7.x! -->
