--- a/site/pom.xml
+++ b/site/pom.xml
@@ -83,7 +83,7 @@
 			<version>1.17.1</version>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.wicket</groupId>
+			<groupId>org.apache.wicket.experimental.wicket6</groupId>
 			<artifactId>wicket-atmosphere</artifactId>
 		</dependency>
 		<dependency>
