--- a/bootstrap/pom.xml
+++ b/bootstrap/pom.xml
@@ -68,6 +68,11 @@
 			<version>0.9.3</version>
 		</dependency>
 		<dependency>
+			<groupId>de.agilecoders.wicket</groupId>
+			<artifactId>wicket-bootstrap-less</artifactId>
+			<version>0.9.3</version>
+		</dependency>
+		<dependency>
 			<groupId>de.agilecoders.wicket.webjars</groupId>
 			<artifactId>wicket-webjars</artifactId>
 			<version>0.4.2</version>
