--- a/bootstrap/pom.xml
+++ b/bootstrap/pom.xml
@@ -86,6 +86,10 @@
 			<groupId>org.javassist</groupId>
 			<artifactId>javassist</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.antlr</groupId>
+			<artifactId>stringtemplate</artifactId>
+		</dependency>
 		
 		<!-- used by FacebookPageSelect2 -->
 		<dependency>
