--- a/bootstrap/pom.xml
+++ b/bootstrap/pom.xml
@@ -49,7 +49,8 @@
 		<dependency>
 			<groupId>de.agilecoders.wicket</groupId>
 			<artifactId>wicket-bootstrap-core</artifactId>
-			<version>0.9.3</version>
+			<version>0.9.4</version>
+			<!-- won't be needed after reflections 0.9.9 -->
 			<exclusions>
 				<exclusion>
 					<artifactId>javassist</artifactId>
@@ -58,33 +59,23 @@
 			</exclusions>
 		</dependency>
 		<dependency>
+			<groupId>org.javassist</groupId>
+			<artifactId>javassist</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>de.agilecoders.wicket</groupId>
 			<artifactId>wicket-bootstrap-extensions</artifactId>
-			<version>0.9.3</version>
+			<version>0.9.4</version>
 		</dependency>
 		<dependency>
 			<groupId>de.agilecoders.wicket</groupId>
 			<artifactId>wicket-bootstrap-themes</artifactId>
-			<version>0.9.3</version>
+			<version>0.9.4</version>
 		</dependency>
 		<dependency>
 			<groupId>de.agilecoders.wicket</groupId>
 			<artifactId>wicket-bootstrap-less</artifactId>
-			<version>0.9.3</version>
-		</dependency>
-		<dependency>
-			<groupId>de.agilecoders.wicket.webjars</groupId>
-			<artifactId>wicket-webjars</artifactId>
-			<version>0.4.2</version>
-		</dependency>
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.webjars</groupId> -->
-<!-- 			<artifactId>bootstrap</artifactId> -->
-<!-- 			<version>3.1.1-1</version> -->
-<!-- 		</dependency> -->
-		<dependency>
-			<groupId>org.javassist</groupId>
-			<artifactId>javassist</artifactId>
+			<version>0.9.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.antlr</groupId>
