BC-2300 #comment Facebook Conversion Tracking Pixel support

--- a/site/pom.xml
+++ b/site/pom.xml
@@ -17,6 +17,10 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.soluvas</groupId>
+			<artifactId>org.soluvas.socmed</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.soluvas</groupId>
 			<artifactId>org.soluvas.category</artifactId>
 		</dependency>
 		<dependency>
