--- a/pom.xml
+++ b/pom.xml
@@ -212,6 +212,24 @@
 <!-- 				<version>${wicket.version}</version> -->
 <!-- 			</dependency> -->
 
+			<dependency>
+			   <groupId>org.ocpsoft.rewrite</groupId>
+			   <artifactId>rewrite-servlet</artifactId>
+			   <version>2.0.12.Final</version>
+			</dependency>
+			<dependency>
+			   <groupId>org.ocpsoft.rewrite</groupId>
+			   <artifactId>rewrite-integration-spring</artifactId>
+			   <version>2.0.12.Final</version>
+			   <scope>runtime</scope>
+			</dependency>
+			<dependency>
+			    <groupId>org.ocpsoft.logging</groupId>
+			    <artifactId>logging-adapter-slf4j</artifactId>
+			    <version>1.0.2.Final</version>
+			   <scope>runtime</scope>
+			</dependency>
+			
 		</dependencies>
 	</dependencyManagement>
 
