BC-2485: Prefix public facing URIs with /[languageTag]/ to prepare for localization
Task-Url: https://idbippo.atlassian.net/browse/BC-2485

--- a/site/pom.xml
+++ b/site/pom.xml
@@ -105,6 +105,15 @@
 			<groupId>org.eclipse.emf</groupId>
 			<artifactId>org.eclipse.emf.common</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.ocpsoft.rewrite</groupId>
+			<artifactId>rewrite-servlet</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.ocpsoft.rewrite</groupId>
+			<artifactId>rewrite-integration-spring</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.apache.karaf.shell</groupId>
