--- a/site/pom.xml
+++ b/site/pom.xml
@@ -73,6 +73,11 @@
 		</dependency>
 
 		<dependency>
+		    <groupId>com.google.code</groupId>
+		    <artifactId>sitemapgen4j</artifactId>
+		    <version>1.0.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.antlr</groupId>
 			<artifactId>stringtemplate</artifactId>
 		</dependency>
