BC-2421: SEO-friendly Custom (stateless) Bookmarkable PagingNavigator
Task-Url: https://idbippo.atlassian.net/browse/BC-2421

--- a/site/pom.xml
+++ b/site/pom.xml
@@ -64,6 +64,10 @@
 			<artifactId>wicketstuff-annotation</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.wicketstuff</groupId>
+			<artifactId>wicketstuff-stateless</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.wicket</groupId>
 			<artifactId>wicket-datetime</artifactId>
 		</dependency>
