--- a/pom.xml
+++ b/pom.xml
@@ -187,6 +187,11 @@
 			</dependency>
 			
 			<dependency>
+				<groupId>org.apache.wicket</groupId>
+				<artifactId>wicket-devutils</artifactId>
+				<version>${wicket.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>org.wicketstuff</groupId>
 				<artifactId>wicketstuff-core</artifactId>
 				<version>${wicketstuff.version}</version>
@@ -197,8 +202,8 @@
 				<version>${wicketstuff.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.apache.wicket</groupId>
-				<artifactId>wicket-devutils</artifactId>
+				<groupId>org.wicketstuff</groupId>
+				<artifactId>wicketstuff-stateless</artifactId>
 				<version>${wicket.version}</version>
 			</dependency>
 			<dependency>
