BC-2421: SEO-friendly Custom (stateless) Bookmarkable PagingNavigator
Task-Url: https://idbippo.atlassian.net/browse/BC-2421

--- a/pom.xml
+++ b/pom.xml
@@ -205,6 +205,12 @@
 				<groupId>org.wicketstuff</groupId>
 				<artifactId>wicketstuff-stateless</artifactId>
 				<version>${wicket.version}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>org.slf4j</groupId>
+						<artifactId>slf4j-simple</artifactId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 			<dependency>
 				<groupId>org.wicketstuff</groupId>
